2010-09-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Remove obsolete .cvsignore files.
	* .cvsignore, doc/.cvsignore, lib/.cvsignore, lib/am/.cvsignore,
	lib/Automake/.cvsignore, lib/Automake/tests/.cvsignore,
	m4/.cvsignore, tests/.cvsignore: Files deleted.  Even when using
	savannah's CVS readonly mirror there's no way to commit back to
	the real repository, so this files are not worth maintaining or
	keeping around.

2010-09-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	* m4/dmalloc.m4: Bump serial number and copyright years.

2010-09-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix broken link in `AM_WITH_DMALLOC' help screen.
	* m4/dmalloc.m4 (AM_WITH_DMALLOC): Refer only to the dmalloc site
	`http://www.dmalloc.com', not to the dmalloc tarball there (which
	seems to have been removed, substituted by multiple release
	tarballs now).

2010-09-17  Eric Blake  <eblake@redhat.com>

	Avoid triple-space after period.
	* automake.in (handle_single_transform): Avoid 3 spaces at
	sentence end.
	* ChangeLog.03: Likewise.
	* lib/Automake/ChannelDefs.pm: Likewise.
	* lib/Automake/Channels.pm (_print_message): Likewise.
	* lib/Automake/Rule.pm (rule): Likewise.
	* lib/Automake/Variable.pm (var): Likewise.
	* lib/am/distdir.am: Likewise.
	* tests/insthook.test: Likewise.

2010-09-15  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Test automake-generated portions of configure help screen.
	* tests/help-depend.test: New test.
	* tests/help-depend2.test: Likewise.
	* tests/help-dmalloc.test: Likewise.
	* tests/help-init.test: Likewise.
	* tests/help-lispdir.test: Likewise.
	* tests/help-maintainer.test: Likewise.
	* tests/help-multilib.test: Likewise.
	* tests/help-regex.test: Likewise.
	* tests/help-silent.test: Likewise.
	* tests/help-upc.test: Likewise.
	* tests/mmode.test: Remove tests on `configure --help' output,
	they are supersed by tests in `help-maintainer.test'.
	* tests/Makefile.am (TESTS): Update.
