@@ -1,5 +1,15 @@
 2010-09-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Perl modules: remove references to "Automake CVS repository".
+	* lib/Automake/Channels.pm: Update comments to refer to "Automke's
+	git repository" rather than to "Automake's CVS repository".
+	* lib/Automake/Configure_ac.pm: Likewise.
+	* lib/Automake/FileUtils.pm: Likewise.
+	* lib/Automake/Struct.pm: Likewise.
+	* lib/Automake/XFile.pm: Likewise.
+	* lib/Automake/Version.pm (=head1 DESCRIPTION): Refer to "git
+	branches" rather than "CVS branches".
+
 	Remove obsolete .cvsignore files.
 	* .cvsignore, doc/.cvsignore, lib/.cvsignore, lib/am/.cvsignore,
 	lib/Automake/.cvsignore, lib/Automake/tests/.cvsignore,
